# mugicha

./: .gitignore  README.md  mugicha.toml  pyproject.toml
src/mugicha/: __init__.py  build_tree.py  files.py  target_files.py
