[project]
name = "mugicha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "gitpython>=3.1.44",
    "ipykernel>=6.29.5",
    "jupytext>=1.16.6",
    "pathspec>=0.12.1",
    "rich>=13.9.4",
    "toml>=0.10.2",
    "watchdog>=6.0.0",
]


[project.scripts]
mugicha = "mugicha:main"


[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/mugicha",
]
